[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wayline-sdk"
version = "0.1.0"
description = "Wayline Python SDK — task communication and scheduler interface"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["wl"]
